# FastAPI_template

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  Makefile  README.md  docker-compose.yml  pyproject.toml
dockerfiles/server/: Dockerfile
src/app/: __main__.py  env.py  uvicorn_helpers.py
src/app/exceptions/: base.py  handlers.py
src/app/meta/: api.py
src/app/routers/: ping.py
test/test_api_server/: test_resources.py
