[tool.poetry]
name = "app"
version = "0.1.0"
description = "A simple app written using FastAPI"
authors = ["leonardocordoba <cordoba.leonardoignacio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
pydantic = "^2.6.1"
typer = "^0.9.0"
uvicorn = "^0.27.1"
pre-commit = "^3.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"